[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-walk-explorer"
version = "0.1.0"
description = "Quantum walk visualizer and logging toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "imageio>=2.31",
  "pillow>=8.3.2",
  "flask>=2.3",
  "gunicorn>=21.2",
  "celery[redis]>=5.3",
  "qiskit==1.2.0",
]

[project.scripts]
qwe = "quantum_walk_explorer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
